# fashion-trend-analysis

./: .gitignore  GETTING_STARTED.md  Makefile  PROJECTSPEC.MD  PROJECT_SUMMARY.md  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  schema.sql
k8s/base/: api-gateway.yaml  image-processor.yaml  kustomization.yaml  ml-analysis.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: quick-start.sh
services/api-gateway/: Dockerfile  README.md  package.json
services/api-gateway/src/: config.ts  index.ts  logger.ts
services/api-gateway/src/middleware/: errorHandler.ts  rateLimiter.ts  validator.ts
services/api-gateway/src/routes/: analytics.ts  health.ts  images.ts  trends.ts
services/api-gateway/src/services/: cache.ts  database.ts  imageProcessor.ts
services/frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
services/frontend/src/app/: globals.css  layout.tsx  page.tsx
services/frontend/src/app/search/: page.tsx
services/frontend/src/app/trends/: page.tsx
services/frontend/src/app/trends/[id]/: page.tsx
services/frontend/src/app/upload/: page.tsx
services/frontend/src/components/charts/: AnalyticsDashboard.tsx
services/frontend/src/components/layout/: Sidebar.tsx
services/frontend/src/components/ui/: Badge.tsx  StatCard.tsx  StatsGrid.tsx  TrendCard.tsx
services/frontend/src/types/: react-sparklines.d.ts
services/image-processor/: CMakeLists.txt  Dockerfile  README.md
services/image-processor/include/: base64.h  feature_extractor.h  qdrant_client.h
services/image-processor/src/: base64.cpp  feature_extractor.cpp  main.cpp  qdrant_client.cpp
services/ml-analysis/: Dockerfile  README.md  main.py  requirements.txt
services/web-scraper/: Dockerfile  README.md  main.py  requirements.txt
